fix theme mebis: padding of labels and activities in course view too large

--- a/theme/mebis/scss/moodle/_cu-course.scss
+++ b/theme/mebis/scss/moodle/_cu-course.scss
@@ -139,3 +139,16 @@ ul.jumpnavigation {
         }
     }
 }
+
+// No padding for small devices
+@media only screen and (max-width: $screen-sm-min) {
+    
+    .editing .section .activity {
+        
+        .contentwithoutlink,
+        .activityinstance {
+            padding-right: 0;
+            margin-top: 2em;
+        }
+    }
+}
